Avoid multiple vertical scrollbars

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -1038,6 +1038,10 @@ input[type=checkbox] {
 
 // ***** Feature Tree
 #featuretree {
+  .panel-body {
+    max-height: none;
+  }
+
   ul {
     padding-left: 1.6em;
   }
